--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
 
     </div>
     <div class="blok-1">
-        <img src="webpag.png" alt="">
-  
+        <img src="webpag.png" alt=" MY WEBPAGR">
+        
     </div>
+   <div class="blok-2">
+    <a href="https://web.facebook.com/?_rdc=1&_rdr">My facebook Id</a>
+  
+   </div>
+   <img src="myphoto.jpg" alt="">
 
 
     
